fixes top footer spacing

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -384,7 +384,7 @@ a {
 .main-footer-top {
 	$fsz: $body-font-size;
 
-	padding: em(30px, $fsz);
+	padding: em(36px, $fsz);
 
 	img {
 		margin: auto;
@@ -392,6 +392,7 @@ a {
 
 	.pyme {
 		width: 25%;
+		margin-top: em(20px, $fsz);
 
 		@media (min-width: 520px) {
 			width: 14%;
@@ -403,12 +404,12 @@ a {
 	$fsz: $body-font-size;
  	
 	padding: 0;
-	padding-top: em(24px, $fsz);
 	margin: 0;
+	margin-top: em(24px, $fsz);
 
 	li {
 		display: inline-block;
-		margin-left: em(10px, $fsz);
+		margin: em(12px, $fsz) 0 0 em(10px, $fsz);
 
 		&:first-child {
 			margin-left: 0;
@@ -854,13 +855,6 @@ div#n2-ss-2 div.n2-ss-slide, div#n2-ss-2 div.n2-ss-canvas, div#n2-ss-2 div.n2-ss
 		.pyme {
 			width: 30%;
 		}
-	}
-
-	.footer-links {
-		$fsz: $body-font-size;
-		
-		padding: 0;
-		padding-top: em(36px, $fsz);
 	}
 
 	.product-info {
